<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>me.brunorm.skywars</groupId>
	<artifactId>Skywars</artifactId>
	<version>0.3.2.2.2</version>
	<name>Skywars</name>

	<properties>
		<project.java.version>17</project.java.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>ISO-8859-1</project.reporting.outputEncoding>
		<mainClass>me.brunorm.skywars.Skywars</mainClass>
	</properties>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.io/repository/maven-public/</url>
		</repository>
	</repositories>

	<dependencies>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot</artifactId>
			<version>1.8.8-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>me.filoghost.holographicdisplays</groupId>
			<artifactId>holographicdisplays-api</artifactId>
			<version>3.0.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.gmail.filoghost.holographicdisplays</groupId>
			<artifactId>holographicdisplays-api</artifactId>
			<version>2.4.9</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.decentsoftware-eu</groupId>
			<artifactId>decentholograms</artifactId>
			<version>2.5.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.Querz</groupId>
			<artifactId>NBT</artifactId>
			<version>6.1</version>
			<type>jar</type>
		</dependency>

	</dependencies>

	<build>
		<defaultGoal>package</defaultGoal>
		<finalName>${project.name}</finalName>

		<resources>
			<!--
			<resource>
				<directory>src/main/resources/schematics</directory>
			<filtering>false</filtering>
					<includes>
						<include>mini_trees.schematic</include>
			</includes>
				</resource>
			-->
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<outputDirectory>${outputDirectory}</outputDirectory>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>${project.java.version}</source>
					<target>${project.java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<propertiesEncoding>ISO-8859-1</propertiesEncoding>
					<encoding>${project.reporting.outputEncoding}</encoding>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>schematic</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<outputDirectory>${outputDirectory}</outputDirectory>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>false</addDefaultImplementationEntries>
						</manifest>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>

		</plugins>

	</build>
</project>